# colablinter

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: release.yaml  test.yaml
examples/: notebook.ipynb
src/colablinter/: __init__.py  cli.py  command.py  drive_mount.py  logger.py  magics.py  notebook.py  timer.py  utils.py
tests/: test_command.py  test_init.py  test_magics.py
