[project]
name = "colablinter"
version = "0.4.1"
description = "Linting and formatting Python code in Google Colab."
readme = "README.md"
authors = [
    {name = "RektPunk", email = "rektpunk@gmail.com"},
]
keywords = ["jupyter", "colab", "ipython", "magic", "ruff", "isort", "linter"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: IPython",
]
requires-python = ">=3.10"
dependencies = [
    "ipython>=7.34.0",
    "ruff>=0.15.10",
]

[project.urls]
repository = "https://github.com/RektPunk/colablinter"
